--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
   "dependencies": {
     "three": "^0.123.0",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "gl-pixel-stream": "^1.2.0",
+    "object-assign": "^4.0.1",
+    "png-stream": "^1.0.5"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
